--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_transactions">Transactions</string>
     <string name="title_add_transaction">Add Transaction</string>
     <string name="back_button_description">Back</string>
+    <string name="title_transaction_details">Transaction Details</string>
 </resources>
